button styling modal

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -788,3 +788,22 @@ z-index: 99;
     border-radius: 0 0 15px 15px !important; /* bawah bundar */
   }
 }
+.modal {
+  z-index: 9999 !important;
+}
+
+.modal-backdrop {
+    z-index: 9998 !important;
+}
+
+.modal-content{
+    background-color: var(--warna-kedua);
+    color: var(--warna-teks-hitam);
+    
+}
+.modal-content button{
+    background-color: var(--warna-utama);
+    color: var(--warna-teks-putih);
+    border-radius: 5px;
+    border: none;
+}
