--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -807,3 +807,9 @@ z-index: 99;
     border-radius: 5px;
     border: none;
 }
+
+.card-img-top {
+    width: 100%;
+    height: 200px; /* Atau bisa disesuaikan: 180px, 250px, dll */
+    object-fit: cover;
+}
