--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -703,15 +703,6 @@ flex-direction: row;
 .btngallery:hover > a{
   color:#FFFFFF ; 
 }
-.clientbg{
-  position: relative;
-}
-.ubahbg{
-position : absolute;
-top: 0;
-height: 100%;
-z-index: 99;
-}
 
 .img-cl{
     width: fit-content;
@@ -787,6 +778,42 @@ z-index: 99;
   .cp-inner {
     border-radius: 0 0 15px 15px !important; /* bawah bundar */
   }
+
+  .carousel-item img{
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+    }
+
+.location{
+    height: fit-content;
+display: flex;
+flex-direction: column! important;
+}
+.img-1{
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 20px;
+    border: 3px solid var(--warna-utama);
+}
+
+#contact{
+    height: max-content !important;
+    display: block;
+}
+
+footer{
+    display: block;
+}
+.img-2{
+    width: 90%;
+    height: auto;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    border-radius: 20px;
+    border: 3px solid var(--warna-utama);
+}
 }
 .modal {
   z-index: 9999 !important;
