--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -701,7 +701,25 @@ flex-direction: row;
 }
 
 .btngallery:hover > a{
+  color: var(--warna-utama) ; 
+}
+.btngallery1{
+  background-color: transparent;
+  border-radius: 20px;
+  border: 2px solid var(--warna-kedua);
+   color: var(--warna-kedua);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.btngallery1:hover{
+  background-color: var(--warna-kedua);
   color:#FFFFFF ; 
+  transition: all .3s;
+}
+
+.btngallery1:hover > a{
+  color: var(--warna-utama) ; 
 }
 
 .img-cl{
@@ -817,6 +835,7 @@ footer{
 }
 .modal {
   z-index: 9999 !important;
+  color: var(--warna-teks-hitam);
 }
 
 .modal-backdrop {
@@ -843,4 +862,23 @@ footer{
     width: 100%;
     height: 200px; /* Atau bisa disesuaikan: 180px, 250px, dll */
     object-fit: cover;
+}
+
+.tabel-modal{
+  background-color: var(--warna-kedua);
+  color: var(--warna-teks-hitam);
+}
+
+.modal-body p{
+  color: var(--warna-teks-hitam);
+  font-weight: bold;
+}
+
+.modal-body{
+  background-color: var(--warna-utama);
+  color: var(--warna-teks-hitam);
+}
+
+.list-group-item{
+  background-color: var(--warna-kedua);
 }
