--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -157,7 +157,7 @@ text-align: justify;
 }
 .card-sr {
 position: relative;
-height: 360px;
+height: 500px;
 width: calc(33% - 36px);
 min-width: 420px;
 border-radius: 14px;
@@ -173,20 +173,16 @@ background-color: rgba(99, 99, 99, 0.24);
 
 .bg {
 position: absolute;
-top: 8px;
-left: 8px;
-width: calc(100% - 16px);
-height: calc(100% - 16px);
+top: 5px;
+left: 5px;
+width: calc(100% - 10px);
+height: calc(100% - 10px);
+padding: 15px;
 z-index: 2;
 background: var(--warna-kedua);
 backdrop-filter: blur(24px);
 border-radius: 10px;
 overflow: hidden;
-}
-.bg img{
-height: 80%;
-object-fit: cover;
-object-position: 0 40%;
 }
 .bg h4{
 color: var(--warna-utama);
@@ -859,9 +855,11 @@ footer{
 }
 
 .card-img-top {
-    width: 100%;
-    height: 200px; /* Atau bisa disesuaikan: 180px, 250px, dll */
-    object-fit: cover;
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 12px ;
+  object-position: 0% 40%;
 }
 
 .tabel-modal{
@@ -888,4 +886,104 @@ footer{
 }
 .form-login{
   background-color: var(--warna-kedua);
+}
+
+.learn-more {
+ position: relative;
+ display: inline-block;
+ cursor: pointer;
+ outline: none;
+ border: 0;
+ vertical-align: middle;
+ text-decoration: none;
+ background: transparent;
+ padding: 0;
+ font-size: inherit;
+ font-family: inherit;
+ width: 12rem;
+ height: auto;
+}
+
+.learn-more .circle {
+ transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+ position: relative;
+ display: block;
+ margin: 0;
+ width: 3rem;
+ height: 3rem;
+ background: var(--warna-utama);
+ border-radius: 1.625rem;
+}
+
+.learn-more .circle .icon {
+ transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+ position: absolute;
+ top: 0;
+ bottom: 0;
+ margin: auto;
+ background: #fff;
+}
+
+.learn-more .circle .icon.arrow {
+ transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+ left: 0.625rem;
+ width: 1.125rem;
+ height: 0.125rem;
+ background: none;
+}
+
+.learn-more .circle .icon.arrow::before {
+ position: absolute;
+ content: "";
+ top: -0.29rem;
+ right: 0.0625rem;
+ width: 0.625rem;
+ height: 0.625rem;
+ border-top: 0.125rem solid #000000;
+ border-right: 0.125rem solid #000000;
+ transform: rotate(45deg);
+}
+
+.learn-more .button-text {
+ transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+ position: absolute;
+ top: 0;
+ left: 0;
+ right: 0;
+ bottom: 0;
+ padding: 0.75rem 0;
+ margin: 0 0 0 1.85rem;
+ color: var(--warna-utama);
+ font-weight: 700;
+ line-height: 1.6;
+ text-align: center;
+ text-transform: uppercase;
+}
+
+.learn-more:hover .circle {
+ width: 100%;
+}
+
+.learn-more:hover .circle .icon.arrow {
+ background: #000000;
+ transform: translate(1rem, 0);
+}
+
+.learn-more:hover .button-text {
+ color: #000000;
+}
+.button-container{
+  display: flex;
+  justify-content: start;
+  padding: 0 0 0 20px;
+  align-items: center;
+  margin-top: 10px;
+  width: 100%;
+  height: auto;
+}
+
+.card-title{
+  display: block;
+  height: 80px;
+  margin-top: 20px;
 }
