--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1007,13 +1007,48 @@ footer{
   width: 80%;
   height: auto;
   display: flex;
+  margin-top: 1rem;
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
   padding: 40px 20px 40px 20px;
   background-color: var(--warna-kedua);
+  border-radius: 20px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+  border: 2px solid var(--warna-utama);
+  position: relative;
+  transition: all .3s;
+}
+.service-1:hover,
+.service-2:hover,
+.service-3:hover,
+.service-4:hover,
+.service-5:hover {
+  transform: scale(1.01);
+  transform: rotate(1.5deg  );
+  box-shadow: 0 0 30px var(--warna-utama);
+  transition: all .3s;
+  border: 5px solid var(--warna-utama);
 }
 
+.service-1:hover>.desc,
+.service-2:hover>.desc,
+.service-3:hover>.desc,
+.service-4:hover>.desc,
+.service-5:hover>.desc {
+  transform: scale(1.01);
+  transform: rotate(-1.5deg  );
+  transition: all .3s;
+}
+.service-1:hover>.img-group,
+.service-2:hover>.img-group,
+.service-3:hover>.img-group,
+.service-4:hover>.img-group,
+.service-5:hover>.img-group {
+  transform: scale(1.01);
+  transform: rotate(-1.5deg  );
+  transition: all .3s;
+}
 .img-group{
   height: 450px;
   width : 450px;
@@ -1058,6 +1093,52 @@ footer{
   color: var(--warna-teks-hitam);
   font-size: 1.2rem;
   text-align: justify;
+}
+.btn-services{
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--warna-utama);
+  border: 3px solid var(--warna-utama);
+  text-align: center;
+  padding: 5px 10px;
+  border-radius: 15px;
+  margin: 10px;
+  font-weight: bold;
+}
+.btn-services:hover{
+  background-color: var(--warna-utama);
+  color: var(--warna-teks-putih);
+  transition: all .3s;
+}
+.btn-exit{
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--warna-teks-hitam);
+  background-color: crimson;
+  text-align: center;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  font-size: 2.4rem;
+  padding: 5px;
+  font-weight: bolder;
+  position: absolute;
+  z-index: 2;
+  top: 20px;
+  right: 20px;
+}
+.btn-exit:hover{
+  transform: rotate(-1.5deg);
+  transform: scale(1.01);
+  box-shadow: 0 0 15px crimson;
+  transition: all .5s;
+}
+.btn-exit:active{
+  transform: scale(1.12);
 }
 
 @media screen and (max-width: 968px) {
