--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -476,11 +476,11 @@ opacity: 0;
 opacity: 1;
 }
 
-#miniCarousel .carousel-inner .carousel-item p, #minicarousel1 .carousel-inner .carousel-item p, #minicarousel2 .carousel-inner .carousel-item p, #minicarousel3 .carousel-inner .carousel-item p, #minicarousel4 .carousel-inner .carousel-item p, #minicarousel5 .carousel-inner .carousel-item p{ 
+.carousel-client .carousel-inner .carousel-item p{ 
 color: var(--warna-teks-hitam);
 text-align: center;
 }
-#miniCarousel, #minicarousel1, #minicarousel2, #minicarousel3, #minicarousel4, #minicarousel5{ 
+.carousel-client{ 
 height: 400px;
 max-height: fit-content;
 width: calc((100%/4)-20px);
@@ -744,14 +744,14 @@ flex-direction: row;
   position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 30px;
 }
 
 .carousel-client .carousel-inner{
   height: 100%;
   width: 100%;
-  border-radius: 30px;
-
+  border-radius: 50px;
+}
+.carousel-client .carousel-item{  
 }
 .carousel-client .carousel-item img{
   height: 280px;
